...
              ),
              Flexible(
                child: ListView(
                  shrinkWrap: true,
                  children: [
                    ListTile(
                      title: const Text('Все'),
                      selected: widget.selectedCategoryId == null,
                      trailing: widget.selectedCategoryId == null
                          ? const Icon(Icons.check)
                          : null,
                      onTap: widget.onAll == null
                          ? null
...
